# FaceRecognition

./: CMakeLists.txt  CMakeLists.txt~  FaceDetector.cpp  FaceDetector.h  Recognition.cpp  Recognition.h  main.cpp  main.cpp~  mainRecognizer.cpp  preprocessFace.cpp  preprocessFace.h  recognition.cpp~  recognition.h~  test.cpp
